--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node src/index.js",
     "dev": "DB_NAME=customers node --watch src/index.js",
     "test": "NODE_ENV=test node --test test/",
+    "test:dev": "NODE_ENV=test node --watch --test test/",
     "test:debug": "NODE_ENV=test node --inspect --test --watch test/"
   },
   "keywords": [],
